Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
 
   border: 2px solid #444;
   border-radius: 20px;
-  /* overflow: hidden; */
+  overflow: hidden;
 
   position: relative;
   display: flex;
